k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-platform
  namespace: hello-platform
spec:
  type: ClusterIP
  selector:
    app: hello-platform
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
